// to generate: npm install -g protoc-gen-js 
//protoc --js_out=import_style=commonjs,binary:. .\job-service.proto
syntax = "proto3";

message JobRequest {
    int32 id = 1;
}

message JobResponse {
    int32 id = 1;
    string title = 2;
    string level = 3;
    string jobType = 4;
    string endDate = 5;
}

service JobService {
    rpc GetJobInformation (JobRequest) returns (JobResponse);
    rpc UpdateApplyCountGrpc (JobRequest) returns (JobResponse);
}